# src/chat/chatController.ts
@@ -1,6 +1,16 @@
 // src/users/usersController.ts
-import { Body, Controller, Get, Post, Route, Security, Tags } from 'tsoa';
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  Response,
+  Route,
+  Security,
+  Tags,
+} from 'tsoa';
 import { NewChat } from '../db/schema';
+import { ValidateErrorJSON } from '../errors';
 import { ChatService } from './chat.service';
 
 @Route('v1/chats')
@@ -9,6 +19,7 @@ export class ChatsController extends Controller {
    * Returns an array of chats owned by the user. User identity (email) is extracted from JWT token.
    * @summary Get all chats for a user
    */
+  @Response<ValidateErrorJSON>(422, 'Validation Failed')
   @Security('BearerAuth') // add role checks like this: @Security('BearerAuth', ['admin'])
   @Get()
   @Tags('Chats')
@@ -20,6 +31,7 @@ export class ChatsController extends Controller {
    * Creates a new chat with the initial message content. User identity (email) is extracted from JWT token.
    * @summary Create a new chat
    */
+  @Response<ValidateErrorJSON>(422, 'Validation Failed')
   @Security('BearerAuth')
   @Post()
   @Tags('Chats')
